2025-07-02T02:08:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16014414250 # 1378
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-07-02
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3647 / 0 3648 / +0 +1

2025-07-01T12:55:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15999938961 # 1377
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-07-01
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3645 / 0 3647 / +0 +2

2025-06-30T12:55:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15973491993 # 1375
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-30
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3644 / 0 3645 / +0 +1

2025-06-30T02:20:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15962347594 # 1374
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-30
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3643 / 0 3644 / +0 +1

2025-06-29T02:25:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15950589902 # 1372
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-06-29
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3640 / 0 3643 / +0 +3

2025-06-28T12:49:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15944313512 # 1371