@@ -1,3 +1,9 @@
+2025-07-02T12:55:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16025709469 # 1379
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-07-02
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3648 / 0 3649 / +0 +1
+
 2025-07-02T02:08:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16014414250 # 1378
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-07-02
